# desktopkit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml
kits/app/: CMakeLists.txt  app.h  main.cpp  theme.cpp
kits/basedir/: CMakeLists.txt  README.md  basedir.cpp  basedir.h  basedir.pc.in
kits/core/: CMakeLists.txt  README.md  basedir.cpp  common.cpp  core.cpp  core.h  main.cpp  mime.cpp  mimes.cpp
